assets/stylesheets/drawer.scss
$header-height: 2.5em;

.topic-chat-float-container {
  z-index: 120; // higher than timeline, lower than composer
  position: fixed;
  right: 0;
  left: 0;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  pointer-events: none !important;
  > * {
    pointer-events: auto;
  }
  bottom: 0;
  &.composer-draft-collapsed {
    bottom: 40px;
  }

  box-sizing: border-box;
  max-height: 90vh;
  padding-bottom: var(--composer-height, 0px);
  transition: padding-bottom 250ms ease;
}
.tc-drawer {
  width: 400px;
  margin-right: 20px;
  align-self: flex-end;
}

.topic-chat-container {
  background: var(--secondary, $secondary);
  border: solid 1px;
  border-color: var(--primary, $primary);
  border-bottom: 0;
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
  height: 2.5em;
  //overflow-y: hidden;
  &.expanded {
    max-height: 530px;
    height: calc(85vh - var(--composer-height, 0px));
    .tc-live-pane, .tc-chat-listing {
      max-height: calc(530px - #{$header-height});
      height: calc(85vh - var(--composer-height, 0px) - #{$header-height});
    }
  }
}
.topic-chat-drawer-header {
  box-sizing: border-box;
  border-bottom: solid 1px var(--primary, $primary);
  padding: 0.25em 1em;
  height: $header-height;
  width: 100%;
  display: flex;
  justify-content: space-between;

  span {
    flex-grow: 1;
  }
  .d-icon {
    color: var(--tertiary, $tertiary);
    align-self: center;
    height: 1.1em;
  }
}

.tc-messages-container {
  word-wrap: break-word;
  white-space: normal;
  .tc-message {
    margin-top: 4px;
  }
  .tc-meta-data {
    color: $primary-high;
    .names {
      display: inline-block;
      vertical-align: bottom;
      margin-left: 4px;
      .first {
        font-weight: bold;
      }
      span {
        margin-right: 4px;
      }
    }
  }
}

.tc-live-pane {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  .tc-messages-scroll {
    flex-grow: 1;
    overflow-y: scroll;
    padding: 2px;
    margin-left: 4px;
  }
  .scroll-stick-wrap {
    position: relative;
  }
  .scroll-stick-wrap2 {
    position: absolute;
    bottom: 0;
    margin-bottom: 2em;
    display: flex;
    width: 100%;
    justify-content: center;
  }
  .scroll-stick-warning {
    color: var(--primary-very-low, $primary-very-low);
    background: var(--secondary-low, $secondary-low);
    padding: 0.5em;
    border-radius: 4px;
    opacity: 75%;
  }
  .tc-composer {
    min-height: 1.5em;
    flex-shrink: 0;
    display: flex;
    flex-direction: row;
    align-items: stretch;
    textarea {
      flex-grow: 1;
      margin-bottom: 0;
      border: 0;
    }
    margin-bottom: 2px;
    border: solid var(--primary-medium, $primary-medium);
    border-width: 1px 0;
  }
}

.tc-history {
  background-color: var(--primary-low, $primary-low);
  border: 1px solid var(--primary-high, $primary-high);
  padding: 4px;
  text-align: left;
}

.post-controls .show-chat.btn-flat span {
  padding-left: 0.45em;
}

